deployments/pathweb/readarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: readarr
  namespace: media-services
  labels:
    app.kubernetes.io/name: readarr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: readarr
  serviceName: readarr-headless
  replicas: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: readarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: pathweb-worker-baldric
      containers:
      - name: readarr
        image: linuxserver/readarr:latest
        ports:
        - containerPort: 8787
          name: http
        volumeMounts:
        - name: config
          mountPath: /config
        - name: downloads
          mountPath: /downloads
        - name: media
          mountPath: /media/Books
          subPath: Books
      volumes:
      - name: downloads
        persistentVolumeClaim:
          claimName: okinawa-downloads
      - name: media
        persistentVolumeClaim:
          claimName: okinawa-media
  volumeClaimTemplates:
  - metadata:
      name: config
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
